# moralis-streams-api

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
docs/: AbiInput.md  AbiItem.md  AbiOutput.md  AbiType.md  Addresses.md  AddressesTypesAddressResponse.md  AddressesTypesAddressesAdd.md  AddressesTypesAddressesRemove.md  AddressesTypesAddressesResponse.md  AddressesTypesDeleteAddressResponse.md  AddressesTypesUUID.md  AdvancedOptions.md  AllOfPartialStreamsTypesStreamsModelCreateAbi.md  AllOfPartialStreamsTypesStreamsModelCreateFilter.md  AllOfStreamsModelAbi.md  AllOfStreamsModelFilter.md  AllOfstreamsTypesStreamsModelAbi.md  AllOfstreamsTypesStreamsModelCreateAbi.md  AllOfstreamsTypesStreamsModelCreateFilter.md  AllOfstreamsTypesStreamsModelFilter.md  AnyOfaddressesTypesAddressResponseAddress.md  AnyOfaddressesTypesAddressesAddAddress.md  BetaApi.md  Block.md  EVMStreamsApi.md  HistoryApi.md  HistoryModel.md  HistoryTypesHistoryModel.md  HistoryTypesHistoryResponse.md  HistoryTypesUUID.md  IAbi.md  IERC20Approval.md  IERC20Transfer.md  INFTApproval.md  INFTApprovalERC1155.md  INFTApprovalERC721.md  INFTTransfer.md  InternalTransaction.md  Log.md  PartialStreamsTypesStreamsModelCreate_.md  (+18 more)
make.include/: browser.mk  clean.mk  common.mk  docker.mk  docs.mk  lint.mk  publish.mk  release.mk  requirements.mk  test.mk  version.mk
moralis_streams_api/: __init__.py  api_client.py  configuration.py  rest.py
scripts/: loadzip
test/: test_abi_input.py  test_abi_item.py  test_abi_type.py  (+55 more)
(+60 files in other folders)
