[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"



[project]
name = "moralis-streams-api"
version = "1.0.11"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["moralis streams openapi"]
classifiers = [
  "Intended Audience :: Developers",

  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["description"] 

dependencies = [
  "certifi>=14.05.14",
  "six>=1.10",
  "python_dateutil>=2.5.3",
  "urllib3>=1.15.1"
]

[tool.flit.module]
name = "moralis_streams_api"

[project.optional-dependencies]
dev = [
  "coverage>=4.0.3",
  "nose>=1.3.7",
  "pluggy>=0.3.1",
  "py>=1.4.31",
  "python-box",
  "randomize>=0.13",
  "tox",
  "toml"
]

[project.urls]
Home = "https://github.com/rstms/moralis-streams-api"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']
